apps/portfolio/frontend/src/index.css
*, *::before, *::after {
  box-sizing: border-box;
}

body {
  font-family: "Inter", sans-serif;
  font-weight: 300;
  font-style: normal;
  font-size: 18px;
  line-height: 28px;
  color: #0a0a0a;
  background: #fafafa;
  margin: 0;
  padding: 0;
}

p {
  max-width: 800px;
  font-size: 18px;
  line-height: 28px;
  margin-top: 0;
}

a {
  color: #000000;
  font-weight: inherit;
  text-underline-offset: 2px;
  transition: text-underline-offset 0.2s ease-in-out;
}

a:hover {
  text-underline-offset: 5px;
}

h1 {
  font-weight: 400;
  font-size: 32px;
  line-height: 38px;
  max-width: 70vw;
  margin-top: 0;
}

h2 {
  font-weight: 500;
  font-size: 24px;
  line-height: 32px;
  margin-top: 0;
}

h3 {
  font-weight: 400;
  font-size: 14px;
  line-height: 18px;
  opacity: 0.6;
  margin-top: 0;
}

h4 {
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
  margin-top: 0;
}

main {
  margin: 0;
  padding: 5vw 0;
}

section,
header {
  padding: 5vw 10vw;
  margin-bottom: 5vw;
  position: relative;
}

/* Homepage project cards */
section.work {
  background: #cccccc;
  height: calc(40vw + 50px);
  margin: 5vw;
  display: block;
  padding: 0;
  position: relative;
  overflow: hidden;
}

section.work a {
  display: block;
  width: 100%;
  height: 100%;
  text-decoration: none;
  position: relative;
}

/* Cover image background */
.project {
  display: block;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  background-size: cover;
  background-position: center;
  z-index: 0;
}

/* Gradient overlay for project title legibility */
.project-gradient {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 50%;
  background: linear-gradient(to top, rgba(0,0,0,0.65) 0%, rgba(0,0,0,0) 100%);
  z-index: 1;
  pointer-events: none;
}

/* Project title on homepage cards */
section.work a span {
  display: block;
  position: absolute;
  bottom: 5%;
  left: 5%;
  z-index: 2;
  color: #ffffff;
  font-size: clamp(2rem, 6vw, 7vw);
  line-height: 1;
  font-weight: 500;
  margin: 0;
}

/* Image sections */
section.image {
  margin: 5vw;
  display: block;
  padding: 0;
  font-size: 0;
}

img.half-width:nth-child(odd) {
  width: calc(50% - 7px);
  margin-right: 14px;
  vertical-align: top;
}

img.half-width:nth-child(even) {
  width: calc(50% - 7px);
  margin-right: 0;
  vertical-align: top;
}

img.full-width {
  width: 100%;
  display: block;
  margin-top: 14px;
  vertical-align: top;
}

img.full-width:first-child {
  margin-top: 0;
}

img.third-width {
  width: calc((100% / 3) - 10px);
  margin-right: 14px;
  vertical-align: top;
  margin-bottom: 14px;
}

img.third-width:nth-child(3n) {
  width: calc((100% / 3) - 10px);
  margin-right: 0;
}

section img {
  width: 100%;
}

figcaption {
  padding: 20px 5vw;
  font-size: 12px;
  line-height: 16px;
  margin: 0;
}

/* Contact footer */
ul#contact {
  list-style: none;
  padding: 0;
  margin: 0;
}

ul#contact li {
  display: inline;
  margin-right: 30px;
  font-size: 24px;
}

ul#contact li a {
  text-decoration: none;
}

/* Back button */
a.back {
  width: 60px;
  height: 60px;
  background-color: #000000;
  display: block;
  position: fixed;
  z-index: 999;
  top: 0;
  right: 0;
  color: #ffffff;
  font-size: 0;
  background-image: url('/cross.png');
  background-size: cover;
  cursor: pointer;
}

@media screen and (min-width: 600px) {
  a.back {
    width: 9vw;
    height: 9vw;
    left: 0;
    right: auto;
    background-image: url('/arrow.png');
  }
}

@media screen and (min-width: 768px) {
  a.back {
    width: 8vw;
    height: 8vw;
  }
}

@media screen and (min-width: 1024px) {
  a.back {
    top: 2vw;
    left: 2vw;
    width: 6vw;
    height: 6vw;
  }

  p {
    font-size: 24px;
    line-height: 38px;
  }
}

@media screen and (min-width: 1440px) {
  a.back {
    top: 3vw;
    left: 3vw;
    width: 4vw;
    height: 4vw;
  }
}

